--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "format_version": 2,
     "header": {
         "description": "§rStops players from being able to make Nether Portals, and get into The Nether. | §3 © TheAlienDoctor §r| §eDownload from TheAlienDoctor.com §r| §4Version: 1.0.0 §r",
-        "name": "§1§lAlien's§r §eNo Nether §4(V1.0.0)§r",
+        "name": "§1§lAlien's§r §eNo Nether §4(BP-V1.0.0)§r",
         "uuid": "f910b1fb-83a9-4d9f-a38a-d6873e5c5d07",
         "version": [
             1,
